Bug 561495 - [OOPP] Mouse wheel and related windowing event hangs. r=masayuki, a=jrmuizel.